[package]
name = "starmod"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["mods", "starfield"]
repository = "https://github.com/luctius/starmod"
description = "Cmdline Modmanager for Starfield on Linux/Proton"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadow-rs = "0.21.0"
anyhow = "1.0"
thiserror = "1.0"
clap = {version = "4.4.3", features = ["derive"] }
strum = { version = "0.24", default-features = false, features = ["derive"] }
strum_macros = "0.24"
zip = "0.6"
rust-lzma = "0.5"
tar = "0.4"
sevenz-rust = "0.5.2"
flate2 = "1.0.27"
unrar = "0.5.1"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
serde_json = "1.0.107"
toml = "0.8.0" # By now we have added almost every format available...
# fomod = "0.2.0"
fomod = { git = "https://github.com/luctius/fomod.git", branch = "main"}
walkdir = "2.4.0"
xdg = "2.5.2"
dirs = "5.0.1"  # TODO: either dirs or xdg is superflous, choose one.
fuzzy-matcher = "0.3.7"
comfy-table = "7.0.1"
encoding_rs_io = "0.1.7"
read-stdin = "1.1.1"
# camino = "1.1.6" //TODO use camino instead of Path and PathBuf
# enum-kinds = "0.5.1"
# libloadorder = "11.4.1"

[build-dependencies]
shadow-rs = "0.21.0"

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "z"
overflow-checks = true
