[package]
name = "starmod"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["mods", "starfield"]
repository = "https://github.com/luctius/starmod"
description = "Cmdline Modmanager for Starfield on Linux/Proton"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadow-rs = "0.21"
anyhow = "1.0"
thiserror = "1.0"
clap = {version = "4.4", features = ["derive"] }
strum = { version = "0.24", default-features = false, features = ["derive"] }
strum_macros = "0.24"
zip = "0.6"
rust-lzma = "0.5"
tar = "0.4"
sevenz-rust = "0.5"
flate2 = "1.0"
unrar = "0.5"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
serde_json = "1.0"
toml = "0.8" # By now we have added almost every format available...
# fomod = "0.2.0"
fomod = { git = "https://github.com/luctius/fomod.git", branch = "main"}
walkdir = "2.4"
xdg = "2.5"
dirs = "5.0"  # TODO: either dirs or xdg is superflous, choose one.
fuzzy-matcher = "0.3"
comfy-table = "7.0"
encoding_rs_io = "0.1"
read-stdin = "1.1"
flexi_logger = "0.27.0"
log = "0.4"
clap_complete = "4.4"
# clap-repl = "0.1"  # TODO: Can we use reedline-repl instead?

# camino = "1.1.6" # TODO use camino instead of Path and PathBuf
# enum-kinds = "0.5.1"
libloadorder = {git = "https://github.com/Ortham/libloadorder.git", branch = "starfield"}

[build-dependencies]
shadow-rs = "0.21.0"

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "z"
overflow-checks = true
